--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Word counter | Peter R. Stuhlmann web development</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
+    <textarea id="wc-text-input" type="text"></textarea>
     
+    <input type="button" id="wc-counter-button" value="Count!">
+
+    <div id="wc-words-count-output"></div>
+
     <script src="assets/js/counter.js"></script>
 </body>
+
 </html>
