Added main tag, renamed output div and button

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 
 <body>
-    <textarea id="wc-text-input" type="text"></textarea>
-    
-    <input type="button" id="wc-counter-button" value="Count!">
-
-    <div id="wc-words-count-output"></div>
+    <main>
+        <h1>Word counter</h1>
+        <textarea id="wc-text-input" type="text" placeholder="Enter a text ..."></textarea>
+        <input type="button" id="wc-counter-button" value="Analyse!">
+        <div id="wc-results-output"></div>
+    </main>
 
     <script src="assets/js/counter.js"></script>
 </body>
